Creature from the Black Lagoon L-4C (competition MOD) (replaces older Creature from the Black Lagoon L-5C (competition MOD))
Diner PA-0 (Prototype), LF-2 (French)
Dr. Dude LU-1 (Europe)
Eight Ball (Free Play+)
Eight Ball Deluxe (Player 2/4 Bonus Countdown Bugfix)
Elvira and the Party Monsters LF-1 (French)
Evel Knievel (Free Play+)
Flash Gordon (French Vocalizer Sound and Free Play variant)
Freedom (Free Play+ rev. 07 and 20)
Gilligan's Island L-8
Heavy Metal Meltdown (German)
Jack*Bot 0.4A (Prototype)
Last Action Hero 1.06 (Canadian)
Mata Hari (Free Play+)
Medieval Madness 1.0 (Pinball FX MOD)
Metallica 1.80.0,1.80.0LE
Mousin' Around! LA-4C (competition MOD)
New Star's Phoenix (French Speech and corresponding Free Play variant)
Night Rider (Free Play+)
Party Zone F-4 (Pinball FX MOD)
Phantom of the Opera 3.1
Pharaoh L-2 (tomb sound fix MOD)
Power Play (Free Play+)
Radical! L-1C (competition MOD)
Road Show L-6C (competition MOD)
Rollergames L-2C (competition MOD)
Safe Cracker 1.8 (Pinball FX MOD)
Star Trek: The Next Generation LX-5
Star's Phoenix (French Speech and corresponding Free Play variant)
Star Wars 1.03 with Display A0.46
Strikes and Spares (Free Play+)
Theatre of Magic 1.3XC (competition MOD) (replaces older Theatre of Magic 1.5C (competition MOD))
Tom & Jerry (unofficial MOD of Hollywood Heat)
Wheel of Fortune 6.02 (Home Rom)



Version 3.1 (July 29th, 2018) - "Flippin' fast"
------------------------------------------------------------------------------

*** CORE/CPU ***
Fix wrong gain/volume of voices/sound effects in Sound Mode 1 (i.e. builtin alternate sound file support)
Further improve M114 sound core (Mr. Game)
Add save credits support for Bow & Arrow
Fix neverending sounds on LTD system 4 games, added sound support for Cowboy Eight Ball and Zephy