@@ -470,9 +470,14 @@ WPC_ROMSTART(ft,l4,"fshtl_4.rom",0x80000,CRC(beb147b6) SHA1(543eea2e14283485221c
 WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
 WPC_ROMEND
 
+WPC_ROMSTART(ft,p2,"ft_p2.u6",0x80000,CRC(e776ebb8) SHA1(9701291b991f62b705f6866f299429e668be0e33))
+WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
+WPC_ROMEND
+
 WPC_ROMSTART(ft,p4,"ft_p4.u6",0x80000,CRC(386cbe45) SHA1(5cb4a32591121c4ed3da292fb50cec0d8d5dd44f))
 WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
 WPC_ROMEND
+
 WPC_ROMSTART(ft,p5,"ft_p5.u6",0x80000,CRC(1f7c799b) SHA1(4880e05ae16fd08d76a30dcb4115ad4dff130849))
 WPCS_SOUNDROM8xx("ft_u18.l1",CRC(48d2760a) SHA1(701b0bbb68f99332493ee1276e5a1cef5c85d499))
 WPC_ROMEND
@@ -486,6 +491,7 @@ CORE_CLONEDEF(ft,d6,l5,"Fish Tales (D-6 Text size patch LED Ghost Fix)",2015,"In
 CORE_CLONEDEF(ft,d5,l5,"Fish Tales (D-5 LED Ghost Fix)",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,l3,l5,"Fish Tales (L-3)",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,l4,l5,"Fish Tales (L-4)",1992, "Williams",wpc_mFliptronS,0)
+CORE_CLONEDEF(ft,p2,l5,"Fish Tales (P-2 Prototype)",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,p4,l5,"Fish Tales (P-4 Prototype)",1992, "Williams",wpc_mFliptronS,0)
 CORE_CLONEDEF(ft,p5,l5,"Fish Tales (P-5 LED Ghost Fix)",1992, "Williams",wpc_mFliptronS,0)
 
