@@ -57,6 +57,7 @@ Eight Ball (Free Play+)
 Eight Ball Deluxe (Player 2/4 Bonus Countdown Bugfix)
 Elvira and the Party Monsters LF-1 (French)
 Evel Knievel (Free Play+)
+Fish Tales P-2 (Prototype)
 Flash Gordon (French Vocalizer Sound and Free Play variant)
 Freedom (Free Play+ rev. 07 and 20)
 Gilligan's Island L-8
@@ -72,9 +73,11 @@ Night Rider (Free Play+)
 Party Zone F-4 (Pinball FX MOD)
 Phantom of the Opera 3.1
 Pharaoh L-2 (tomb sound fix MOD)
+Police Force LG-4 (German)
 Power Play (Free Play+)
 Radical! L-1C (competition MOD)
 Road Show L-6C (competition MOD)
+Robocop A2.9
 Rollergames L-2C (competition MOD)
 Safe Cracker 1.8 (Pinball FX MOD)
 Star Trek: The Next Generation LX-5
